; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/file/src/extr_funcs.c_checkdone.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/file/src/extr_funcs.c_checkdone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.magic_set = type { i32 }

@MAGIC_CONTINUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.magic_set*, i32*)* @checkdone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkdone(%struct.magic_set* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.magic_set*, align 8
  %5 = alloca i32*, align 8
  store %struct.magic_set* %0, %struct.magic_set** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.magic_set*, %struct.magic_set** %4, align 8
  %7 = getelementptr inbounds %struct.magic_set, %struct.magic_set* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @MAGIC_CONTINUE, align 4
  %10 = and i32 %8, %9
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %20

13:                                               ; preds = %2
  %14 = load %struct.magic_set*, %struct.magic_set** %4, align 8
  %15 = call i32 @file_separator(%struct.magic_set* %14)
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  store i32 -1, i32* %18, align 4
  br label %19

19:                                               ; preds = %17, %13
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %12
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @file_separator(%struct.magic_set*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
